--- a/Automation/Content/Site.css
+++ b/Automation/Content/Site.css
@@ -38,12 +38,95 @@ textarea {
 }
 
 .placeholder {
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-    border-style: dashed;
+    border: 1px dotted black;
+    visibility: visible !important;
+    height: auto;
     width: auto;
-    height: 50px;
 }
+
+/* JQuery Resizable CSS (missing from build) */
+
+.ui-resizable {
+    position: relative;
+}
+
+.ui-resizable-handle {
+    position: absolute;
+    font-size: 0.1px;
+    display: block;
+}
+
+.ui-resizable-disabled .ui-resizable-handle, .ui-resizable-autohide .ui-resizable-handle {
+    display: none;
+}
+
+.ui-resizable-n {
+    cursor: n-resize;
+    height: 7px;
+    width: 100%;
+    top: -5px;
+    left: 0;
+}
+
+.ui-resizable-s {
+    cursor: s-resize;
+    height: 7px;
+    width: 100%;
+    bottom: -5px;
+    left: 0;
+}
+
+.ui-resizable-e {
+    cursor: e-resize;
+    width: 7px;
+    right: -5px;
+    top: 0;
+    height: 100%;
+}
+
+.ui-resizable-w {
+    cursor: w-resize;
+    width: 7px;
+    left: -5px;
+    top: 0;
+    height: 100%;
+}
+
+.ui-resizable-se {
+    cursor: se-resize;
+    width: 12px;
+    height: 12px;
+    right: 1px;
+    bottom: 1px;
+}
+
+.ui-resizable-sw {
+    cursor: sw-resize;
+    width: 9px;
+    height: 9px;
+    left: -5px;
+    bottom: -5px;
+}
+
+.ui-resizable-nw {
+    cursor: nw-resize;
+    width: 9px;
+    height: 9px;
+    left: -5px;
+    top: -5px;
+}
+
+.ui-resizable-ne {
+    cursor: ne-resize;
+    width: 9px;
+    height: 9px;
+    right: -5px;
+    top: -5px;
+}
+
+
+
+
 
 
 /* New Panel Stuff */
@@ -83,16 +166,20 @@ textarea {
 }
 
 .bargraph {
-    width: 600px !important;
-    height: auto !important;
-    max-width: 100% !important;
-    max-height: 100% !important;
+    min-width: 600px;
+    min-height: 400px;
+    width: auto;
+    height: auto;
+    max-height: 100%;
 }
 .pieChart {
-    width: 350px !important;
-    height: auto !important;
+    min-width: 350px;
+    min-height: 255px;
+    width: auto;
+    height: 255px;
+    /*height: auto !important;
     max-width: 100% !important;
-    max-height: 100% !important;
+    max-height: 100% !important;*/
 }
 .panel.panel-no-rounded-corner .panel-body, .panel.panel-no-rounded-corner .panel-footer, .panel.panel-no-rounded-corner .panel-heading {
     -webkit-border-radius: 0 !important;
