Now Cookies are used to save sortable div order and resize information. Later this can be committed to the database for peristence.

--- a/Automation/Content/Site.css
+++ b/Automation/Content/Site.css
@@ -167,9 +167,9 @@ textarea {
 
 .bargraph {
     min-width: 600px;
-    min-height: 400px;
+    /*min-height: 400px;*/
     width: auto;
-    height: auto;
+    height: auto !important;
     max-height: 100%;
 }
 .pieChart {
