--- a/Automation/Views/Account/LogOn.cshtml
+++ b/Automation/Views/Account/LogOn.cshtml
@@ -27,6 +27,11 @@
                 <td>@Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control" } })</td>
                 <td>@Html.ValidationMessageFor(m => m.Password, "Must enter Password", new { @class = "text-danger" })</td>
             </tr>
+            <tr>
+                <td>@Html.LabelFor(m => m.RememberMe, htmlAttributes: new { @class = "control-label" })</td>
+                <td>@Html.CheckBoxFor(m => m.RememberMe, htmlAttributes: new { @class = "form-check" }) </td>
+                <td>@Html.ValidationMessageFor(m => m.RememberMe, "Select to remember login.", new { @class = "text-danger" })</td>
+            </tr>
         </table>
        
         <div>
