--- a/Automation/Views/Shared/_GPChart.cshtml
+++ b/Automation/Views/Shared/_GPChart.cshtml
@@ -17,14 +17,14 @@
     </div>
 </div>
 <script type="text/javascript">
-    $(".widgets").sortable({
-        handle: ".panel-heading",
-        connectWith: ".sortable",
-        placeholder: "placeholder",
-        items: ".cardpanel",
-        cursor: "move",
-        opacity: 0.5,
-    });
+    //$(".widgets").sortable({
+    //    handle: ".panel-heading",
+    //    connectWith: ".sortable",
+    //    placeholder: "placeholder",
+    //    items: ".cardpanel",
+    //    cursor: "move",
+    //    opacity: 0.5,
+    //});
 
     var dynamicColours = function () {
         var r = Math.floor(Math.random() * 255);
