--- a/Automation/Views/Shared/_Layout.cshtml
+++ b/Automation/Views/Shared/_Layout.cshtml
@@ -9,12 +9,13 @@
     @Scripts.Render()
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <div class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
+    <div class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <li><img src="~/Images/SSELogo.png" /></li>
+                <img src="~/Images/SSELogo.png" />
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -47,6 +48,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     @Scripts.Render("~/bundles/bootstrap")
     <script src="~/Scripts/site.js" asp-append-version="true"></script>
+    <script src="~/Scripts/jquery.fittext.js"></script>
+    <script src="~/Scripts/jquery.cookie.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
