--- a/Automation/Views/Home/Index.cshtml
+++ b/Automation/Views/Home/Index.cshtml
@@ -21,7 +21,11 @@
         </div>
     </div>
 </div>
+
 <div class="row col-centered" style="margin-top: 100px;">
+    <div class="btn-group" role="button" aria-label="NewWidget">
+        <button type="button" id="metricCard" class="btn btn-info">Metric Card</button>
+    </div>
     <div class="col-lg-12 col-md-12 col-sm-12 maxheight" style="display: table">
 
         <div id="SCOMPartial" style="display: table">
@@ -29,8 +33,8 @@
         </div>
 
         @*<div id="GPOPartial" style="display: table">
-            Loading. . .
-        </div>*@
+                Loading. . .
+            </div>*@
     </div>
 </div>
 @section Scripts {
@@ -65,8 +69,30 @@
             });
         });
 
+        $(document).on('click', '#metricCard', function () {
+            var column = $('#SCOMPartial').find('.cardpanel').length + 1
+            $('#SCOMPartial').find('.sortable').append($('<div class="cardpanel panel-inverse clearfix resizable-card ui-sortable" id= "column_' + column + '">').load('/SCOM/CreateMetricCard?total=99&Title="Test%20Widget"&Label=Total'));
+            $('#column_' + column).resizable({
+                ghost: true,
+                minWidth: 200,
+                minHeight: 255,
+                grid: [40, 40],
+                animate: true,
+                stop: function (event, ui) {
+                    id = ui.element.attr('id')
+                    var uiheight = $('#' + id).height();
+                    var uiwidth = $('#' + id).width();
+                    $.cookie(id + 'height', uiheight);
+                    $.cookie(id + 'width', uiwidth);
+                    $.cookie(id + 'font-p', $('#' + id + ' div p').css("font-size"));
+                    $.cookie(id + 'font-h2', $('#' + id + ' div h2').css("font-size"));
+                    $('.resizable-card p').fitText(0.4, { maxFontSize: '80px' });
+                    $('.resizable-card h2').fitText(0.6, { maxFontSize: '70px' });
+                }
 
-
+            });
+            
+        });
     </script>
 }
 
